--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -9,7 +9,7 @@
             <a class="brand" href="{{pathFor 'postsList'}}">Touché</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="{{pathFor 'postNew'}}">New</a></li>
+                    {{#if currentUser}}<li><a href="{{pathFor 'postNew'}}">New</a></li>{{/if}}
                 </ul>
                 <ul class="nav pull-right">
                     <li>{{> loginButtons}}</li>
