--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -9,7 +9,9 @@
             <a class="brand" href="{{pathFor 'postsList'}}">Touché</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="{{pathFor 'menusList'}}">Testmenuitem</a></li>
+                    {{#each menus}}
+                        <li><a href="{{pathFor 'menusList'}}">{{title}}</a></li>
+                    {{/each}}
                 </ul>
                 <ul class="nav pull-right">
                     <li>{{> loginButtons}}</li>
