--- a/client/views/menus/menu_edit.html
+++ b/client/views/menus/menu_edit.html
@@ -20,5 +20,11 @@
                 <a class="btn btn-danger delete" href="#">Delete title</a>
             </div>
         </div>
+        <hr />
+        <div class="control-group">
+            <div class="controls">
+                <a class="btn btn cancel" href="#">Cancel</a>
+            </div>
+        </div>
     </form>
 </template>
