--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,7 +1,9 @@
 <template name="postsList">
-	<div class="posts">
-		{{#each posts}}
-			{{> postItem}}
-		{{/each}}
-	</div>
+    <div class="row-fluid">
+        <div class="posts span8">
+            {{#each posts}}
+                {{> postItem}}
+            {{/each}}
+        </div>
+    </div>
 </template>
